[gd_scene load_steps=13 format=2]

[ext_resource path="res://src/Characters/Character.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Characters/Player/PlayerAvatar.gd" type="Script" id=2]
[ext_resource path="res://src/Characters/Interactions/InteractionController.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Modules/StateMachine/StateMachine.gd" type="Script" id=4]
[ext_resource path="res://src/Characters/Player/States/Move.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/Characters/Player/States/Interact.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/Modules/StateMachine/StateNameDisplay.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/fonts/kenney_mini_8.tres" type="DynamicFont" id=8]
[ext_resource path="res://assets/art/ola/test_main.png" type="Texture" id=9]

[sub_resource type="ShaderMaterial" id=1]

[sub_resource type="CapsuleShape2D" id=2]
radius = 5.83038
height = 0.0

[sub_resource type="Animation" id=3]
length = 0.001

[node name="Player" instance=ExtResource( 1 )]
collision_mask = 3
script = ExtResource( 2 )

[node name="Sprite" parent="." index="0"]
material = SubResource( 1 )
position = Vector2( 0, -10.0243 )
texture = ExtResource( 9 )

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2( 0, -5.06223 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="InteractionController" parent="." index="2" instance=ExtResource( 3 )]
position = Vector2( 0, -7.8785 )

[node name="StateMachine" type="Node" parent="." index="3"]
script = ExtResource( 4 )

[node name="Move" parent="StateMachine" index="0" instance=ExtResource( 5 )]

[node name="Interact" parent="StateMachine" index="1" instance=ExtResource( 6 )]

[node name="StateNameDisplay" parent="." index="4" instance=ExtResource( 7 )]
margin_top = -32.1395
margin_bottom = -18.1395
custom_fonts/font = ExtResource( 8 )

[node name="AnimationPlayer" parent="." index="5"]
anims/_reset = SubResource( 3 )
